--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.24.8",
+    "@tanstack/react-query-devtools": "^5.24.8",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
